--- a/src/scss/global/_03-vars.scss
+++ b/src/scss/global/_03-vars.scss
@@ -2,6 +2,7 @@
   --main-color: #525A68;
   --main-bg-color: #fff;
   --yellow-color: #FFC600;
+  --light-yellow-color: #ffc600a3;
   --grey-color:  #F9F9F9;
   --black-bold: #273142;
   --light-grey-color: #A5A9AF;
