--- a/src/scss/global/_04-global.scss
+++ b/src/scss/global/_04-global.scss
@@ -21,7 +21,7 @@ body {
 body {
 	font-family: 'Roboto', sans-serif;
 	font-weight: normal;
-	font-size: var(--root-font-size);
+	font-size: var(--font-size);
 	line-height: var(--line-height);
 	background-color: var(--main-bg-color);
 	color: var(--main-color);
