--- a/src/components/bem-blocks/global/reviews/reviews.scss
+++ b/src/components/bem-blocks/global/reviews/reviews.scss
@@ -25,11 +25,18 @@
   }
   &__slider{
     margin-bottom: rem(20px);
+    .slide{
+      height: auto;
+      div{
+        height: 100%;
+      }
+    }
     &-container{
       background-color: #fff;
       box-shadow: 0px 0px rem(20px) #DAE5EB;
       border-radius: rem(5px);
       padding: rem(20px);
+      height: 100%;
     }
     &-header{
       display: grid;
