--- a/src/components/bem-blocks/global/reviews/_media.scss
+++ b/src/components/bem-blocks/global/reviews/_media.scss
@@ -1,6 +1,6 @@
 @screen md {
   .reviews{
-     padding: rem(70px) 0;
+     padding: rem(70px) 0 rem(174px) 0;
      &__title{
        grid-column-end: 1;
        margin-bottom: 0;
