--- a/src/scss/global/_04-global.scss
+++ b/src/scss/global/_04-global.scss
@@ -170,6 +170,7 @@ h6,.title-h6{
 		border-radius: 5px;
 		padding-inline-start: rem(15px);
 		position: relative;
+		background-color: #fff;
 		&.required::after{
 			content: '';
 			display: block;
