--- a/src/components/page/_3_footer.html
+++ b/src/components/page/_3_footer.html
@@ -1,2 +1,55 @@
-<footer class="footer"></footer>
+<footer class="footer">
+    <div class="container">
+        <div class="footer-menus">
+            <div class="footer-menus__item">
+                <div class="footer-menus__title">Компания</div>
+                <ul class="footer-menus__nav">
+                    <li class="footer-menus__nav__item"><a href="#">О компании</a></li>
+                    <li class="footer-menus__nav__item"><a href="#">Услуги</a></li>
+                    <li class="footer-menus__nav__item"><a href="#">Отзывы</a></li>
+                    <li class="footer-menus__nav__item"><a href="#">Обработки персональных данных</a></li>
+                    <li class="footer-menus__nav__item"><a href="#">Договора оферты</a></li>
+                </ul>
+            </div>
+            <div class="footer-menus__item">
+                <div class="footer-menus__title">Информация</div>
+                <ul class="footer-menus__nav">
+                    <li class="footer-menus__nav__item"><a href="#">Доставка и оплата</a></li>
+                    <li class="footer-menus__nav__item"><a href="#">Вопрос ответ</a></li>
+                    <li class="footer-menus__nav__item"><a href="#">Акции</a></li>
+                    <li class="footer-menus__nav__item"><a href="#">Новости</a></li>
+                    <li class="footer-menus__nav__item"><a href="#">Возврат денег</a></li>
+                </ul>
+            </div>
+            <div class="footer-menus__item">
+                <div class="footer-menus__title">Каталог</div>
+                <ul class="footer-menus__nav catalog">
+                    <li class="footer-menus__nav__item"><a href="#">Металлические заборы</a></li>
+                    <li class="footer-menus__nav__item"><a href="#">Деревянные заборы</a></li>
+                    <li class="footer-menus__nav__item"><a href="#">Заборы из пластика</a></li>
+                    <li class="footer-menus__nav__item"><a href="#">Заборы с монолитным основанием</a></li>
+                    <li class="footer-menus__nav__item"><a href="#">Быстровозводимые заборы</a></li>
+                    <li class="footer-menus__nav__item"><a href="#">Заборы из сэндвич панелей</a></li>
+                    <li class="footer-menus__nav__item"><a href="#">Кованые заборы</a></li>
+                    <li class="footer-menus__nav__item"><a href="#">Комбинированные заборы</a></li>
+                    <li class="footer-menus__nav__item"><a href="#">Рулонные заборы</a></li>
+                    <li class="footer-menus__nav__item"><a href="#">Сварные заборы</a></li>
+                    <li class="footer-menus__nav__item"><a href="#">Заборы для дачи</a></li>
+                    <li class="footer-menus__nav__item"><a href="#">Заборы из камня</a></li>
+                    <li class="footer-menus__nav__item"><a href="#">Секционные заборы</a></li>
+                    <li class="footer-menus__nav__item"><a href="#">Шумозащитные заборы и экраны</a></li>
+                </ul>
+            </div>
+            <div class="footer-menus__item">
+                <div class="footer-menus__title">Услуги</div>
+                <ul class="footer-menus__nav">
+                    <li class="footer-menus__nav__item"><a href="#">Гибка Металла</a></li>
+                    <li class="footer-menus__nav__item"><a href="#">Лазерная резка Металла</a></li>
+                    <li class="footer-menus__nav__item"><a href="#">Полимерно-порошковая покраска</a></li>
+                </ul>
+            </div>
+        </div>
+        @@include('../bem-blocks/global/nav-list/nav-list.html')
+    </div>
+</footer>
 @@include('../bem-blocks/global/popup/popup-call.html')
