add new fixes for header

--- a/src/components/bem-blocks/global/nav-list/nav-list.html
+++ b/src/components/bem-blocks/global/nav-list/nav-list.html
@@ -1,8 +1,6 @@
-<div class="nav-list">
+<div class="nav-list @class">
     <div class="nav-list__item footer-list__item">
-        <a href="#" class="logo">
-            <img data-src="img/global/icons/logo.svg" class="lazy" alt="logo">
-        </a>
+        @@include('../logo/logo.html')
     </div>
     <div class="contact-list nav-list__item">
         <div class="contact-list__icon">
