--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,4 +1,5 @@
 @import 'global/*.scss';
+@import "header";
 @import '../components/bem-blocks/**/*.scss';
 
 /* NOTE - import here your style modules */
