--- a/src/components/page/_3_footer.html
+++ b/src/components/page/_3_footer.html
@@ -53,3 +53,4 @@
     </div>
 </footer>
 @@include('../bem-blocks/global/popup/popup-call.html')
+@@include('../bem-blocks/global/search-popup/search-popup.html')
