--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -121,6 +121,7 @@
       background: #525A68;
       padding-top: rem(20px);
       color: #fff;
+      position: absolute;
       &-link{
         font-size: rem(16px);
         line-height: rem(19px);
