--- a/src/components/bem-blocks/global/popup/popup.scss
+++ b/src/components/bem-blocks/global/popup/popup.scss
@@ -7,6 +7,8 @@
     right: 0;
     overflow-y: scroll;
     display: none;
+    z-index: 200;
+    background-color: #4243428c;
   }
   &-wrapper{
     display: flex;
