--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,7 +1,7 @@
 @import 'global/*.scss';
 @import "header";
 @import '../components/bem-blocks/**/*.scss';
-@import "index";
+@import "front-page/index";
 /* NOTE - import here your style modules */
 // GLOBAL C
 @import 'media';
