--- a/src/components/page/_1_head.html
+++ b/src/components/page/_1_head.html
@@ -14,5 +14,6 @@
 	<link rel="stylesheet"
 				href="css/style.min.css">
 	<title>@@title</title>
-	<link href="https://use.fontawesome.com/releases/v5.10.0/css/all.css" rel="stylesheet">
+	<link href="https://use.fontawesome.com/releases/v5.10.0/css/all.css" rel="stylesheet" />
+	<link href="libs/fancybox/jquery.fancybox.min.css" rel="stylesheet" />
 </head>
