add structure for calc

--- a/src/scss/front-page/catalog-banner/_media.scss
+++ b/src/scss/front-page/catalog-banner/_media.scss
@@ -7,6 +7,7 @@
       grid-template-columns: 1.2fr 2fr;
       grid-gap: rem(30px);
       padding: rem(30px);
+      margin-top: -80px;
     }
     &__title{
       line-height: rem(70px);
