--- a/src/scss/global/_04-global.scss
+++ b/src/scss/global/_04-global.scss
@@ -206,7 +206,7 @@ iframe{
 		}
 	}
     &__textarea,&__input{
-		padding: rem(6px) rem(15px) rem(15px) 0;
+		padding: 0 rem(10px) rem(10px) 0;
 		display: block;
 		width: 100%;
 		resize: none;
