--- a/src/scss/global/_04-global.scss
+++ b/src/scss/global/_04-global.scss
@@ -127,10 +127,97 @@ iframe{
 	width: 100%;
 	height: 100%;
 }
+//Radio input
+input[type="radio"]{
+	position: relative;
+	width: rem(16px);
+	height: rem(16px);
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance: none;
+	outline: none;
+	&::before {
+		content: '';
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		width: rem(16px);
+		height: rem(16px);
+		border-radius: 50%;
+		transform: translate(-50%, -50%);
+		background-color: white;
+		border: 1px solid #A5A9AF;
+	}
+	&:checked::after {
+		content: '';
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		width: rem(8px);
+		height: rem(8px);
+		border-radius: 50%;
+		background-color: #A5A9AF;
+		transform: translate(-50%, -50%);
+		visibility: visible;
+	}
+}
+// Input type number
+.input-number{
+	padding: rem(9px);
+	background: #FFFFFF;
+	border: rem(1px) solid #E9EAEC;
+	border-radius: rem(5px);
+	display: grid;
+	justify-content: space-between;
+	align-items: center;
+	max-width: rem(100px);
+	grid-template-columns: rem(40px) rem(10px);
+	&__nav{
+		line-height: 1px;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		margin-top: rem(-5px);
+		&-plus{
+			cursor: pointer;
+			color: #FFC80A;
+			height: 5px;
+		}
+		&-minus{
+			cursor: pointer;
+			color: #525A68;
+			height: 5px;
+		}
+	}
+}
+// Input checkbox
+.input-checkbox{
+	input[type="checkbox"]{
+		display: none;
+		&:checked + label::before{
+			background: center/75% url('../img/global/icons/done.svg') no-repeat;
+		}
+	}
+	label{
+		display: grid;
+		grid-template-columns: 16px 1fr;
+		grid-gap: rem(10px);
+		align-items: center;
+		&::before{
+			content: '';
+			background-color: #FFFFFF;
+			border: 1px solid #E9EAEC;
+			border-radius: 5px;
+			width: rem(16px);
+			height: rem(16px);
+			display: block;
+		}
+	}
+}
 @media (max-width: 640px) {
 	.container{
-		padding-left: 1rem;
-		padding-right: 1rem;
+		padding-left: 2rem;
+		padding-right: 2rem;
 	}
 }
 // Action button
