--- a/src/components/bem-blocks/global/calculator/calculator.scss
+++ b/src/components/bem-blocks/global/calculator/calculator.scss
@@ -6,7 +6,7 @@
   &__nav{
     display: flex;
     counter-reset: calc-step;
-    overflow: scroll;
+    overflow-x: scroll;
     &::-webkit-scrollbar{
       width: 0px;
     }
@@ -175,6 +175,14 @@
         grid-template-columns: 1fr 2fr;
         padding: rem(20px);
         grid-gap: rem(20px);
+        &:last-child{
+          padding: 0;
+          padding-right: rem(20px);
+          .calculator__materials-nav__item-title{
+            padding-top: rem(20px);
+            padding-bottom: rem(20px);
+          }
+        }
         img{
           width: 100%;
           object-position: left;
@@ -401,3 +409,4 @@
     }
   }
 }
+@import "media";
