--- a/src/components/bem-blocks/global/video-block/_media.scss
+++ b/src/components/bem-blocks/global/video-block/_media.scss
@@ -2,6 +2,9 @@
   .video-block{
     &__header{
       margin-bottom: rem(44px);
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
     }
     &__advantages{
       margin-bottom: rem(40px);
