add catalog fence page

--- a/src/components/bem-blocks/global/actions-blocks/calc-block/_media.scss
+++ b/src/components/bem-blocks/global/actions-blocks/calc-block/_media.scss
@@ -12,6 +12,7 @@
     &__content{
       margin-bottom: rem(74px);
       font-size: rem(16px);
+      line-height: rem(24px);
     }
     &__mobile-img{
       display: none;
