--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2,6 +2,7 @@
 @import "header";
 @import '../components/bem-blocks/**/*.scss';
 @import "front-page/index";
+@import "catalog-fence/catalog-fence";
 /* NOTE - import here your style modules */
 // GLOBAL C
 @import 'media';
