--- a/src/scss/front-page/catalog-banner/catalog-banner.scss
+++ b/src/scss/front-page/catalog-banner/catalog-banner.scss
@@ -29,7 +29,9 @@
       grid-gap: rem(20px);
       position: relative;
       max-height: 370px;
-      overflow: auto;
+      overflow: hidden;
+      overflow-y: auto;
+      padding-right: rem(15px);
       &__content{
         padding: rem(15px) rem(5px) rem(15px) rem(20px);
         height: 100%;
