--- a/src/scss/global/_04-global.scss
+++ b/src/scss/global/_04-global.scss
@@ -342,57 +342,24 @@ input[type="radio"]{
 	border-radius: 5px;
 	font-size: rem(12px);
 }
-// Product list
-.product-list{
-	 &__img{
-		 box-shadow: 0px 0px 50px #DAE5EB;
-		 border-radius: 5px;
-		 overflow: hidden;
-		 img{
-			 width: 100%;
-		 }
-		 margin-bottom: rem(10px);
-	 }
-	&__title{
-		font-weight: bold;
-		font-size: rem(18px);
-		line-height: rem(21px);
-		color: #273142;
-		margin-bottom: rem(10px);
-	}
-	&__char-list{
-		color: var(--light-grey-color);
-		margin-bottom: rem(20px);
-		&-item{
-			line-height: rem(24px);
+// Slider dots
+.slick-dots{
+	display: flex;
+	justify-content: center;
+	margin-top: rem(20px);
+	li{
+		width: 10px;
+		height: 10px;
+		left: 175px;
+		top: 8397px;
+		border: 1px solid #A5A9AF;
+		font-size: 0;
+		border-radius: 50%;
+		&:not(:last-child){
+			margin-right: rem(6px);
 		}
-	}
-	&__price{
-		margin-bottom: rem(20px);
-		&-value{
-			font-size: rem(24px);
-			line-height: rem(28px);
-			color: #525A68;
-		}
-	}
-	.slick-dots{
-		display: flex;
-		justify-content: center;
-		margin-top: rem(20px);
-		li{
-			width: 10px;
-			height: 10px;
-			left: 175px;
-			top: 8397px;
-			border: 1px solid #A5A9AF;
-			font-size: 0;
-			border-radius: 50%;
-			&:not(:last-child){
-				margin-right: rem(6px);
-			}
-			&.slick-active{
-				border: 1px solid #FFC80A;
-			}
+		&.slick-active{
+			border: 1px solid #FFC80A;
 		}
 	}
 }
